--- a/main.css
+++ b/main.css
@@ -1,12 +1,10 @@
 ﻿body {
     background-image: url(https://d.wattpad.com/story_parts/137788668/images/13e740945f3885af.jpg);
     background-repeat: no-repeat;
-    min-height: 100%;
-    min-width: 90%;
-    height: auto;
-    position: fixed;
-    left: 0;
-    right: 0;
+    background-size: cover;
+    background-color: #000;
+    margin: 50px 0;
+    font-family: 'Lato', sans-serif;
 }
 
 p {
@@ -23,54 +21,54 @@ li{
     padding: 0;
     list-style-type: none;
 }
-.nogutter {
-    margin: 50px 0;
-    padding: 0;
-    width: 100%;
-    min-width: 100%;
-}
-
-.nogutter > div {
-    margin: 0;
-    padding:0;
-}
-
-#list{
-position: relative;
-display: inline;
-}
 
 #details{
-    color:antiquewhite;
+    color:#fcfcfc;
 }
 
-button{
+button {
     display: block;
     padding: 10px 10px;
     margin: 10px 0;
-    background-color: brown;
+    background-color: #D16C3B;
     border-radius: 8px;
-    font-style:italic;
+    font-style: italic;
     font-size: 16px;
+    border-color: #4C2F1D;
+    color: #4C2F1D;
+    font-weight: 900;
 }
 
-button:hover{
-    background-color: lightsteelblue;
-
-}
+    button:hover {
+        background-color: #d07e57;
+    }
 
 a:link {
-    color: lawngreen;
+    color: #fcfcfc;
 }
 
 a:visited {
-    color: red;
+    color: #fcfcfc;
 }
 
 a:hover {
-    color: darkorange;
+    color: #fcfcfc;
 }
 
 a:active {
-    color: goldenrod;
+    color: #fcfcfc;
+}
+
+@media only screen 
+and (max-width:740px){
+    .col-md-3 > button, #list > li {
+        display: inline-block;
+        margin: 5px 10px;
+    }
+    body{
+        margin: 10px 0;
+    }
+    #details{
+        margin: 50px 0;
+    }
 }
