--- a/main.css
+++ b/main.css
@@ -1,8 +1,15 @@
-﻿body {
+﻿html{
+    height: 100%;
+    width: 100%;
+}
+
+body {
     background-image: url(https://d.wattpad.com/story_parts/137788668/images/13e740945f3885af.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Lato', sans-serif;
+    height: 100%;
+    width: 100%;
 }
 
 p {
