--- a/main.css
+++ b/main.css
@@ -16,6 +16,10 @@ p {
     margin:8px 0;
 }
 
+.hidden{
+    display: none;
+}
+
 ul{
     margin: 0;
     padding:0;
@@ -29,6 +33,41 @@ li{
 
 #details{
     color:#fcfcfc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+h1{
+    color: #fcfcfc;
+    text-align: center;
+    width: 50%;
+    margin: 10px auto;
+    text-decoration: underline;
+}
+
+h2{
+    color: #34f01b;
+    font-size: 36px;
+
+}
+
+p{
+    font-size: 20px;
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 42px;
+    color:white;
+    background-color: rgba(0,0,0,0.6);
 }
 
 button {
